<resources>
    <string name="app_name">My Application</string>
    <string name="post">post</string>
    <string name="contact_info_ex_phone_facebook">Contact Info: Ex. Phone #, Facebook</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Item Description</string>
    <string name="make_a_post">Make a post</string>
    <string name="take_a_photo" />
    <string name="upload_a_photo" />
    <string name="uploaded_picture">Uploaded Picture</string>
    <string name="suggested_price">Suggested Price</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="user_email">User Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="user_icon">user icon</string>
    <string name="sfu_computing_id">SFU Computing ID</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered?</string>
    <string name="registerTextLogin">Login</string>
    <string name="registerSignUp">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="click_the_to_get_started">Click the + to get started</string>
    <string name="sign_out">Sign Out</string>
    <string name="account_information">Account Information</string>
    <string name="show_first_name">First Name:</string>
    <string name="show_last_name">Last Name:</string>
    <string name="show_user_id">User ID:</string>
    <string name="show_phone_number">Phone Number:</string>
    <string name="logout">LogOut</string>
    <string name="next_post">Next Post</string>
    <string name="previous_post">Previous Post</string>
    <string name="previous">Previous</string>
    <string name="last_post">last post</string>
    <string name="title">Title</string>
    <string name="profile_image">Profile Image</string>
    <string name="image_preview">Image Preview</string>
    <string name="sfu_email">SFU Email</string>
</resources>