<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity=""
    android:orientation="vertical"
    android:padding="20dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Post your Item Here!"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/textName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/item_name"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/textDescription"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/item_description"
        android:inputType="textCapWords" />



    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/cameraButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_camera"
            android:contentDescription="@string/takephoto" />

        <ImageButton
            android:id="@+id/uploadImageButton"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/uploadphoto"
            app:srcCompat="@android:drawable/stat_sys_upload" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/uploaded_picture" />

    <EditText
        android:id="@+id/textContact"
        android:layout_width="300dp"
        android:layout_height="92dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/contact_info_ex_phone_facebook"
        android:inputType="textMultiLine" />


    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPost"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post" />

    </LinearLayout>

</LinearLayout>

